2015-07-22  Raymond Penners  <raymond.penners@intenct.nl>

	* Dropped support for Python 2.6 and Django <1.6.

2015-07-21  Raymond Penners  <raymond.penners@intenct.nl>

	* Template context processors are no longer used.

	* The Facebook Graph API fields (/me/?fields=...) can now be
	configured using the provider `FIELDS` setting.

	* The default Facebook Graph API version is now v2.4.

2015-07-02  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.21.0 released.

2015-06-27  Raymond Penners  <raymond.penners@intenct.nl>

	* You can now tweak the authentication params per OAuth provider,
	as you already could for OAuth2. Contributed by Peter Rowlands,
	thanks.

	* Nattaphoom Ch. contributed a Thai translation, thanks!

2015-06-14  Raymond Penners  <raymond.penners@intenct.nl>

	* Guoyu Hao contributed a Baidu provider, thanks!

2015-06-03  Raymond Penners  <raymond.penners@intenct.nl>

	* Rod Xavier Bondoc contributed support logging out on password
	change (see setting: `ACCOUNT_LOGOUT_ON_PASSWORD_CHANGE`)

2015-05-25  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.20.0 released.

2015-05-20  Raymond Penners  <raymond.penners@intenct.nl>

	* Given that the `max_length` for the Django 1.8 `EmailField` has
	been bumped to 254, allauth is following up. Migrations
	(`account`) are in place.

2015-02-27  Raymond Penners  <raymond.penners@intenct.nl>

	* Patrick Paul contributed a provider for Evernote, thanks!

	* Josh Wright contributed a provider for Spotify, thanks!

2015-02-12  Raymond Penners  <raymond.penners@intenct.nl>

	* Björn Andersson added support for Dropbox OAuth2, thanks!

	* guoqiao contributed a provider for Douban, thanks!

2015-02-05  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.19.1 released.

	* Fixed migrations when using South & Django 1.6.

2015-01-04  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.19.0 released.

2014-12-25  Raymond Penners  <raymond.penners@intenct.nl>
