@@ -2,16 +2,14 @@ from __future__ import unicode_literals
 
 import datetime
 
-from django.core.urlresolvers import reverse
 from django.db import models
 from django.db import transaction
 from django.utils.translation import ugettext_lazy as _
 from django.utils import timezone
-from django.contrib.sites.models import Site
 from django.utils.encoding import python_2_unicode_compatible
 from django.utils.crypto import get_random_string
 
-from ..utils import build_absolute_uri
+from ..utils import get_current_site
 from .. import app_settings as allauth_app_settings
 from . import app_settings
 from . import signals
@@ -56,7 +54,7 @@ class EmailAddress(models.Model):
         self.user.save()
         return True
 
-    def send_confirmation(self, request, signup=False):
+    def send_confirmation(self, request=None, signup=False):
         confirmation = EmailConfirmation.create(self)
         confirmation.send(request, signup=signup)
         return confirmation
@@ -121,13 +119,9 @@ class EmailConfirmation(models.Model):
                                          email_address=email_address)
             return email_address
 
-    def send(self, request, signup=False, **kwargs):
-        current_site = kwargs["site"] if "site" in kwargs \
-            else Site.objects.get_current()
-        activate_url = reverse("account_confirm_email", args=[self.key])
-        activate_url = build_absolute_uri(request,
-                                          activate_url,
-                                          protocol=app_settings.DEFAULT_HTTP_PROTOCOL)
+    def send(self, request=None, signup=False):
+        current_site = get_current_site(request)
+        activate_url = get_adapter().get_email_confirmation_url(request, self)
         ctx = {
             "user": self.email_address.user,
             "activate_url": activate_url,
